--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,6 @@ version:          2.1.0
 
 github:
   repo:           https://github.com/huongdo108
+  
+linkedin:
+  repo:           https://www.linkedin.com/in/huong-do-4962346b/
